--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
-:root{
+:root {
   --black: #000000;
-  --white: #FFFFFF;
-  --red: #D33B23;
-  --pink: #FF96B7;
+  --white: #ffffff;
+  --red: #d33b23;
+  --pink: #ff96b7;
   --dark-green: #004739;
-  --light-green: #2FAC68;
-  --blue: #058CCE;
-  --light-blue: #AFD1ED;
-  --yellow: #EDF770;
+  --light-green: #2fac68;
+  --blue: #058cce;
+  --light-blue: #afd1ed;
+  --yellow: #edf770;
+}
+
+@mixin boxMain($color) {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border: 3.5px solid $color;
+  border-radius: 1rem;
+}
+
+.body {
+  background-color: var(--light-green);
 }
