--- a/src/components/Banner/styles.scss
+++ b/src/components/Banner/styles.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100vw;
+  height: 15vh;
   //background-color: var(--light-green);
   padding-bottom: 0.01rem;
   border-bottom: 5px solid var(--dark-green);
