--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 5px solid var(--dark-green);
+  background-color: var(--white);
   .logo-nav {
     width: 55px;
   }
