--- a/src/components/PageNotFound/styles.scss
+++ b/src/components/PageNotFound/styles.scss
@@ -22,8 +22,8 @@
   }
   .button-404 {
     cursor: pointer;
-    outline: none;
-    border: none;
+    text-decoration: none;
+    text-align: center;
     width: 70%;
     font-size: 1.4rem;
     background-color: var(--pink);
