Location component added

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,6 @@
 .divider{
   background-image: url('../../assets/home/divider.png');
   width: 100vw;
-  height: 5vh;
+  height: 48px;
   margin: 0.5rem 0;
 }
