--- a/src/components/CategoryHeader/styles.scss
+++ b/src/components/CategoryHeader/styles.scss
@@ -2,6 +2,7 @@
 
 section.category-header {
   margin-bottom: .5rem;
+  margin-right: 3rem;
 
   .box-category-header {
     @include boxMain(transparent, transparent);
@@ -35,7 +36,14 @@ section.category-header {
   @media (min-width: 1200px) {
     .box-category-header {
       .title-category-header {
-        margin: .8rem 0; 
+        background-color: var(--pink);
+        border-radius: .8rem;
+        box-shadow: -1px 4px 8px 0px rgba(0,0,0,0.5);
+        -webkit-box-shadow: -1px 4px 8px 0px rgba(0,0,0,0.5);
+        -moz-box-shadow: -1px 4px 8px 0px rgba(0,0,0,0.5);
+        color: var(--white);
+        margin: .8rem 0 1rem; 
+        padding: .5rem .8rem;
       }
 
       .arrow-btn-link {
