--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -1,6 +1,14 @@
 @import '../../App.scss';
 
 .container-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  img{
+    margin-bottom: .5rem;
+  }
+  
   p {
     margin: 0;
     margin-bottom: -0.2rem;
@@ -8,7 +16,6 @@
 
   .team-footer {
     margin: .4rem 0 1.5rem;
-    text-align: center;
 
     a.team-members {
       font-style: italic;
