--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -59,8 +59,8 @@
         align-items: center;
         .section-menu {
           cursor: pointer;
-          outline: none;
-          border: none;
+          text-decoration: none;
+          text-align: center;
           background-color: var(--pink);
           color: var(--white);
           width: 65%;
@@ -70,6 +70,7 @@
           font-weight: 500;
           border-radius: 0.8rem;
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          text-transform: uppercase;
         }
       }
     }
