Links of all cards has been added. Carousels of CategoryDesktop component fixed

--- a/src/components/CategoryDesktop/styles.scss
+++ b/src/components/CategoryDesktop/styles.scss
@@ -8,4 +8,8 @@ section.category {
     &:last-child {
         border-bottom: initial
     }
+
+    section.carousel {
+        width: calc(100% - 370px - 3rem)
+    }
 }
