--- a/src/components/PageNotFound/styles.scss
+++ b/src/components/PageNotFound/styles.scss
@@ -33,6 +33,7 @@
       text-decoration: none;
       text-align: center;
       width: 70%;
+      max-width: 350px;
       font-size: 1.4rem;
       background-color: var(--pink);
       color: var(--white);
