--- a/src/components/Veganized/styles.scss
+++ b/src/components/Veganized/styles.scss
@@ -44,6 +44,7 @@
       text-decoration: none;
       text-align: center;
       width: 70%;
+      max-width: 350px;
       font-size: 1.4rem;
       background-color: var(--dark-green);
       color: var(--white);
