--- a/src/components/Product/styles.scss
+++ b/src/components/Product/styles.scss
@@ -14,6 +14,9 @@
       margin-right: 1rem;
     }
     h3 {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
       text-transform: uppercase;
       font-weight: 400;
     }
@@ -40,7 +43,8 @@
   .container-ingredients {
     @include boxMain(var(--pink), transparent);
     box-shadow: 0px 4px 4px rgba(47, 172, 104, 0.5);
-    margin-bottom: 1rem;
+    max-width: 700px;
+    margin: 1rem auto;
     .title-ingredients {
       display: flex;
       align-items: center;
@@ -63,9 +67,13 @@
     @include boxMain(var(--light-blue), transparent);
     width: 75%;
     margin: auto;
+    max-width: 450px;
+
     .box-packs {
       display: flex;
-      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: space-around;
       margin-bottom: 0.9rem;
       .pack {
         display: flex;
@@ -92,16 +100,17 @@
     background-color: var(--light-green);
     box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.25);
     border-radius: 1.5rem;
-    padding: 0.2rem 0.5rem ;
-    outline: none;
-    border: none;
+    padding: 0.2rem 0.5rem;
+    width: 12rem;
+    text-decoration: none;
     margin: 1rem 0 0 2rem;
     h3 {
       font-size: 2rem;
       font-weight: 400;
       margin-right: 0.5rem;
     }
-    &:hover, &:focus{
+    &:hover,
+    &:focus {
       background-color: var(--dark-green);
     }
   }
