responsive product page

--- a/src/components/Product/styles.scss
+++ b/src/components/Product/styles.scss
@@ -1,11 +1,17 @@
 @import "../../App.scss";
 
 .wrapper {
+  position: relative;
   background-color: var(--white);
   border-radius: 1rem;
   margin: 0.2rem 0.4rem;
   padding: 0 0.3rem 1rem 0.3rem;
   color: var(--dark-green);
+  max-width: 1140px;
+  min-height: 91vh;
+  @media (min-width: 1140px) {
+    margin: 0.2rem auto;
+  }
   .container-menu {
     display: flex;
     align-items: center;
@@ -13,31 +19,65 @@
     img {
       margin-right: 1rem;
     }
-    h3 {
+    h3,
+    h2 {
       display: flex;
       justify-content: space-between;
       width: 100%;
       text-transform: uppercase;
       font-weight: 400;
     }
+    @media (min-width: 930px) {
+      h3 {
+        display: none;
+      }
+    }
   }
-  .container-img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 30vh;
-    background-color: var(--pink);
-    border-radius: 1rem;
-    margin-bottom: 1rem;
-  }
-  .container-indications {
-    display: flex;
-    justify-content: space-between;
-    .box-indication {
-      width: 30%;
-      text-align: center;
-      font-weight: 500;
+  .container-desktop {
+    h3 {
+      display: none;
+    }
+    .container-img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 30vh;
+      background-color: var(--pink);
+      border-radius: 1rem;
+      margin-bottom: 1rem;
+    }
+    .container-indications {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .box-indication {
+        width: 30%;
+        text-align: center;
+        font-weight: 500;
+      }
+    }
+    @media (min-width: 930px) {
+      display: flex;
+      h3 {
+        display: block;
+        position: absolute;
+        top: 2rem;
+        left: 2rem;
+        text-transform: uppercase;
+        font-weight: 400;
+      }
+      .container-img {
+        flex: 0.8;
+        margin-right: 2rem;
+        margin-bottom: 0;
+      }
+      .container-indications {
+        flex: 1;
+        border: 1px solid var(--dark-green);
+        border-radius: 3rem;
+      }
     }
   }
   .container-ingredients {
@@ -61,6 +101,14 @@
       text-align: center;
       font-weight: 500;
       font-size: 1.3rem;
+    }
+    @media (min-width: 930px) {
+      height: 20vh !important;
+      margin-bottom: 2rem;
+      justify-content: center;
+      .title-ingredients {
+        justify-content: center;
+      }
     }
   }
   .container-packs {
@@ -103,7 +151,7 @@
     padding: 0.2rem 0.5rem;
     width: 12rem;
     text-decoration: none;
-    margin: 1rem 0 0 2rem;
+    margin: 3rem 0 0 2rem;
     h3 {
       font-size: 2rem;
       font-weight: 400;
@@ -112,6 +160,18 @@
     &:hover,
     &:focus {
       background-color: var(--dark-green);
+    }
+    @media (min-width: 930px) {
+      margin: 3rem auto 2rem auto;
+    }
+  }
+  .wpp{
+    position: absolute;
+    bottom: 5rem;
+    right: 2rem;
+    @media (min-width: 930px) {
+      bottom: 6rem;
+      right: 5rem;
     }
   }
 }
