--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .container-nav {
   position: relative;
   display: flex;
@@ -5,20 +7,47 @@
   align-items: center;
   border-bottom: 5px solid var(--dark-green);
   background-color: var(--white);
-  .logo-nav{
-    height: 6vh;
+  height: 7vh;
+  .logo-nav {
+    height: 100%;
     img {
-      width: 55px;
+      height: 100%;
+    }
+    @media (min-width: 1200px) {
+      a {
+        height: 10vh !important;
+      }
     }
   }
-  .title-nav {
-    font-family: "Comic Neue", cursive;
-    font-size: 1.5rem;
-    font-weight: 400;
+  .box-nav {
+    width: 100%;
+    text-align: center;
+    .title-nav {
+      font-family: "Comic Neue", cursive;
+      font-size: 1.5rem;
+      font-weight: 400;
+      @media (min-width: 1200px) {
+        font-size: 4rem;
+      }
+    }
+    .nav-desktop {
+      margin: 1rem 0;
+      text-align: end;
+      .nav-item {
+        @include sectionNav(1.1rem, 0.2rem 1rem);
+        margin: 0 0.3rem;
+      }
+      @media (max-width: 1200px) {
+        display: none;
+      }
+    }
   }
   .hamburger-nav {
     cursor: pointer;
     margin-right: 0.9em;
+    @media (min-width: 1200px) {
+      display: none;
+    }
   }
 
   .container-menu {
@@ -61,21 +90,12 @@
         flex-direction: column;
         align-items: center;
         .section-menu {
-          cursor: pointer;
-          text-decoration: none;
-          text-align: center;
-          background-color: var(--pink);
-          color: var(--white);
-          width: 65%;
-          margin-bottom: 1.5rem;
-          padding: 0.3rem 0;
-          font-size: 1.4rem;
-          font-weight: 500;
-          border-radius: 0.8rem;
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          text-transform: uppercase;
+          @include sectionNav(1.4rem, 0.3rem 0);
         }
       }
     }
+  }
+  @media (min-width: 1200px) {
+    height: 15vh;
   }
 }
