working on responsive

--- a/src/components/Banner/styles.scss
+++ b/src/components/Banner/styles.scss
@@ -3,7 +3,10 @@
   justify-content: center;
   width: 100vw;
   height: 15vh;
-  //background-color: var(--light-green);
   padding-bottom: 0.01rem;
   border-bottom: 5px solid var(--dark-green);
+  @media (min-width: 1200px){ 
+  background-color: var(--pink);
+  height: 25vh;
+  }
 }
