--- a/src/App.scss
+++ b/src/App.scss
@@ -55,13 +55,14 @@
 }
 
 .body {
-  min-height: 100vh;
   background-color: var(--light-green);
   overflow: hidden;
 }
 
-.divider{
-  background-image: url('../../assets/home/divider.png');
+.divider {
+  position: relative;
+  z-index: 2;
+  background-image: url("../../assets/home/divider.png");
   width: 100vw;
   height: 48px;
   margin: 0.5rem 0;
