--- a/src/components/AboutUs/styles.scss
+++ b/src/components/AboutUs/styles.scss
@@ -1,16 +1,34 @@
-@import '../../App.scss';
+@import "../../App.scss";
 
-.container-aboutus{
-  @include boxMain(var(--pink), var(--yellow));
-  color: var(--dark-green);
-  text-align: center;
-  .title-aboutus{
-    font-size: 1.3rem;
-    font-weight: 500;
-    margin: .8rem 0;
+.wrapper-aboutus {
+  position: relative;
+  .pattern-aboutus {
+    z-index: -1;
+    @media (min-width: 1200px) {
+      @include patternSpeck(400px, 400px, var(--dark-green));
+      top: 0;
+      right: -5rem;
+      z-index: 1;
+    }
   }
-  .text-aboutus{
-    font-weight: 500;
-    font-size: .9rem;
+  .container-aboutus {
+    position: relative;
+    z-index: 2;
+    @include boxMain(var(--pink), var(--yellow));
+    color: var(--dark-green);
+    text-align: center;
+    max-width: 1140px;
+    .title-aboutus {
+      font-size: 1.3rem;
+      font-weight: 500;
+      margin: 0.8rem 0;
+    }
+    .text-aboutus {
+      font-weight: 500;
+      font-size: 0.9rem;
+    }
+    @media (min-width: 1200px) {
+      margin: auto;
+    }
   }
 }
