--- a/src/components/Founders/styles.scss
+++ b/src/components/Founders/styles.scss
@@ -1,42 +1,57 @@
 @import "../../App.scss";
 
-.container-founders {
-  @include boxMain(var(--pink), var(--light-green));
-  .text-founders {
-    text-align: center;
-    font-weight: 500;
-    margin-bottom: 0.8rem;
+.wrapper-founders {
+  @media(min-width: 1200px){
+    background-color: var(--dark-green);
+    padding: 1rem 0;
   }
-  .container-cards{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    grid-auto-rows: 200px;
-    gap: 1rem;
-    justify-items: center;
-    .card-founder{
-      display: flex;
-      flex-direction: column;
-      border: 1px solid var(--dark-green);
-      border-radius: .8rem;
-      min-width: 150px;
-      opacity: 0.9;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      .img{
-        width: auto;
-        height: 60%;
-        background-color: var(--pink); //  remove then. (add img)
-        border-radius: .8rem .8rem 0 0; //  remove then...
+  .container-founders {
+    @include boxMain(var(--pink), var(--light-green));
+    max-width: 1140px;
+    @media (min-width: 1200px) {
+      font-size: 1.2rem;
+      font-weight: 200;
+      margin: 0.5rem auto;
+    }
+    .text-founders {
+      text-align: center;
+      font-weight: 500;
+      margin-bottom: 0.8rem;
+      @media (min-width: 1200px) {
+        color: var(--white);
       }
-      .card-text{
+    }
+    .container-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      grid-auto-rows: 200px;
+      gap: 1rem;
+      justify-items: center;
+      .card-founder {
         display: flex;
-        align-items: end;
-        height: 40%;
-        padding: 0 0 1rem 2rem;
-        background-color: var(--white);
-        border-radius: 0 0 .8rem .8rem;
-        h3{
-          font-size: 1.1rem;
-          font-weight: 400;
+        flex-direction: column;
+        border: 1px solid var(--dark-green);
+        border-radius: 0.8rem;
+        min-width: 150px;
+        opacity: 0.9;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        .img {
+          width: auto;
+          height: 60%;
+          background-color: var(--pink); //  remove then. (add img)
+          border-radius: 0.8rem 0.8rem 0 0; //  remove then...
+        }
+        .card-text {
+          display: flex;
+          align-items: end;
+          height: 40%;
+          padding: 0 0 1rem 2rem;
+          background-color: var(--white);
+          border-radius: 0 0 0.8rem 0.8rem;
+          h3 {
+            font-size: 1.1rem;
+            font-weight: 400;
+          }
         }
       }
     }
