images linked into MediaCard and CategoryHeader components

--- a/src/components/CategoryHeader/styles.scss
+++ b/src/components/CategoryHeader/styles.scss
@@ -54,6 +54,7 @@ section.category-header {
 
     .img-category-header {
       height: 335px;
+      object-fit: cover;
       width: 358px;
     }
   }
