--- a/src/components/MediaCard/styles.scss
+++ b/src/components/MediaCard/styles.scss
@@ -33,7 +33,8 @@
         
         .MuiCardHeader-subheader {
             color: var(--white);
-            font-size: 16px;
+            font-size: 14px;
+            height: 42px;
         }
     }
 
