Open Graph protocol URL fixed. Coming soon image and new category images added

--- a/src/components/MySwiper/styles.scss
+++ b/src/components/MySwiper/styles.scss
@@ -3,6 +3,11 @@ section.carousel {
         margin: 0;
         padding-bottom: 24px;
         
+        img.soon {
+            display: block;
+            margin: 0 auto;
+        }
+
         .swiper-slide {
             max-width: 255px;
         }
