--- a/src/components/Product/styles.scss
+++ b/src/components/Product/styles.scss
@@ -144,12 +144,13 @@
     cursor: pointer;
     display: flex;
     align-items: center;
+    justify-content: center;
     color: var(--white);
     background-color: var(--light-green);
     box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.25);
     border-radius: 1.5rem;
     padding: 0.2rem 0.5rem;
-    width: 12rem;
+    width: 13rem;
     text-decoration: none;
     margin: 3rem 0 0 2rem;
     h3 {
